[package]
name = "rtg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
thiserror = "1.0"
reqwest = { version = "0.11", features = ["json","blocking"] }
tokio = { version = "1", features = ["full"] }
http = "0.2.9"
url = "2.3.1"
futures = "0.3.28"
